Text selection now works properly
Several changes in this commit, which go together as a logical unit:
  * Moved new-answer edit control to top of question pane
  * Added "scripture-quote" CSS style
  * When user highlights a section of text, it will show up in the
    question pane in "scripture-quote" style
  * When answers have a (non-blank, non-null) textHighlight value,
    the selected portion of Scripture will also show up above the
    answer, again in "scripture-quote" style

--- a/src/angular-app/common/css/palaso-ui.css
+++ b/src/angular-app/common/css/palaso-ui.css
@@ -95,3 +95,8 @@ span.larger-text {
 form.control-bar {
 	margin-bottom: 0px;
 }
+
+/* Highlighted text in text selection directive */
+.highlighted {
+	background-color: yellow;
+}
