Allow creating questions from templates
The "Make Question into Template" and "Save as Template" buttons
aren't implemented yet, so users can't actually create new templates.
But if there are templates in the database (such as the ones I added
by hand to test this functionality), they can now be selected for new
questions. The next commit will allow saving new templates, at which
point the templates feature will be fully implemented.

--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -775,8 +775,8 @@ div#comments table.comments td {
 }
 
 /* New Item under ribbon bar */
-div.new-item form {
-	margin: 20px 0 0 0;
+div.new-item {
+	margin: 20px 0 20px 0;
 }
 
 .activity-date {
