--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -27,7 +27,7 @@
 	</div>
 	<br/>
 	Add your own answer<span ng-show="newAnswer.textHighlight"> about this part of the text</span>:
-	<div ng-show="newAnswer.textHighlight" ng-bind-html-unsafe="newAnswer.textHighlight" class="scripture-quote"></div>
+	<div ng-show="newAnswer.textHighlight" ng-bind-html="newAnswer.textHighlight" class="scripture-quote"></div>
 	<form ng-submit="submitAnswer()">
 		<textarea ng-model="newAnswer.content" pui-jqte="jqteOptions"></textarea>
 		<button type="submit" class="btn">Answer Question</button>
@@ -45,10 +45,12 @@
 		<td>
 			<div class="answer"><!--<b>DEBUG:</b>answerId = {{answerId}}, answer.id = {{answer.id}}<br/>-->
 				<!--<b>DEBUG:</b>answer = {{answer}}<br/>-->
-				<div ng-show="answer.textHighlight" ng-bind-html-unsafe="answer.textHighlight" class="scripture-quote">
+				<div ng-show="answer.textHighlight" ng-bind-html="answer.textHighlight" class="scripture-quote">
 					{{answer.textHighlight}}
 				</div>
-				{{answer.content}}
+				<div ng-bind-html="answer.content">
+					{{answer.content}}
+				</div>
 				<div class="by">
 					<img ng-src="{{answer.userRef.avatar_ref}}" width="32" height="32" /><div>answered {{answer.dateCreated | date:mediumDate}}<br/>by {{answer.userRef.username}}</div>
 				</div>
