voting: Add votes to DTO
* Votes now in Question DTO
* Question page shows disabled vote arrows

--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -732,6 +732,10 @@ div.vote a {
 	cursor: pointer;
 }
 
+div.vote a.disabled {
+	color: #eee;
+}
+
 div.vote span {
 	font-size: 24px;
 	font-weight: bold;
