Minor jqte style changes.

--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -36,7 +36,7 @@
 		<div ng-show="newAnswer.textHighlight" ng-bind-html="newAnswer.textHighlight" class="scripture-quote"></div>
 			<form ng-submit="submitAnswer()">
 				<textarea ng-model="newAnswer.content" pui-jqte="jqteOptions"></textarea>
-				<button type="submit" class="btn">Answer Question</button>
+				<button type="submit" class="btn">Done</button>
 			</form>
 		</div>
 	</div>
