--- a/src/angular-app/sfchecks/partials/project.html
+++ b/src/angular-app/sfchecks/partials/project.html
@@ -10,7 +10,7 @@
 	<label>Title</label>
 	<input ng-model="title" class="span4" type="text" placeholder="Title"/>
 	<label>Text</label>
-	<textarea ng-model="content" class="span4" rows="4" placeholder="Paste the USX text here"></textarea>
+	<textarea textdrop="content" ng-model="content" class="span4" rows="4" placeholder="Paste the USX text here"></textarea>
 	<label></label>
 	<button type="submit" class="btn" ng-click="addText(); newTextCollapsed = true"><i class="icon-plus"></i>Add Text to Check</button>
 	</fieldset>
