featured project "feature" closes #56

--- a/src/angular-app/sfchecks/partials/project-settings.html
+++ b/src/angular-app/sfchecks/partials/project-settings.html
@@ -46,6 +46,8 @@
 	<fieldset>
 		<label>Project Name</label>
 		<input type="text" placeholder="(project name)" ng-model="project.name"/>
+		<label><input type="checkbox" ng-model="project.featured"/> Featured On Website</label>
+		
 	</fieldset>
 	<button type="submit" class="btn">Save</button>
 	</form>
