--- a/src/angular-app/sfchecks/partials/project.html
+++ b/src/angular-app/sfchecks/partials/project.html
@@ -1,8 +1,8 @@
 <h2 style="font-weight:normal">Texts for {{project.name}}</h2>
 <form ng-show="rights.showControlBar" class="control-bar form-inline">
-	<button ng-show="rights.deleteOther" class="btn" ng-click="removeTexts()"><i class="icon-remove"></i>Remove Texts</button>
+	<button ng-disabled="selected.length == 0" ng-show="rights.deleteOther" class="btn" ng-click="removeTexts()"><i class="icon-remove"></i>Remove Texts</button>
 	<button ng-show="rights.create" class="btn" ng-click="newTextCollapsed = !newTextCollapsed"><i class="icon-plus"></i>Add New Text</button>
-	<a ng-show="rights.editOther" class="btn" href="{{project.url}}/settings"><i class="icon-pencil"></i>Update Project</a>
+	<a ng-show="rights.editOther" class="btn" href="{{project.url}}/settings"><i class="icon-pencil"></i> Update Project Settings</a>
 </form>
 <div class="new-item" collapse="newTextCollapsed">
 	<form class="well">
