--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -151,11 +151,10 @@ div.sfcontainer {
 }
 /* Bootstrap
 */
-
 div.sf-logo-large {
 	position: absolute;
-	width: 96px;
-	height: 165px;
+	width: 92px;
+	height: auto;
 	top: 7px;
 	left: 6px;
 	z-index: 10;
@@ -163,8 +162,8 @@ div.sf-logo-large {
 
 div.sf-logo-medium {
 	position: absolute;
-	width: 96px;
-	height: 122px;
+	width: 92px;
+	height: auto;
 	top: -38px;
 	left: -4px;
 	z-index: 10;
@@ -279,6 +278,12 @@ hr {
 	height: 1px;
 	background-color: #dcdcdc;
 	border: 0;
+}
+
+div.sfcontainer h1 {
+	margin-left: 132px;
+	margin-top: 24px;
+	margin-bottom: 24px;
 }
 
 /* Form Elements */
@@ -623,6 +628,7 @@ i.icon-remove {
 /* Top navigation */
 div.hdrnav {
 	overflow: auto;
+	margin-left: 122px;
 }
 
 /*
