implement notify in userprofile and fixed cursor weirdness
Former-commit-id: fc3bcaf415beed36114636406ca99072f29c4e94

--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -835,3 +835,12 @@ div.new-item {
 table select {
 	margin-bottom: 0px;
 }
+
+label {
+	cursor: default;
+}
+
+.nav-tabs li {
+	cursor: pointer;
+}
+
