removed fakeData from projects, texts and questions lists
Former-commit-id: 99dde69bd02c180b09de3f874c24ab2f50cc8a7a

--- a/src/angular-app/sfchecks/partials/project.html
+++ b/src/angular-app/sfchecks/partials/project.html
@@ -32,8 +32,7 @@
 				<span class="larger-text">{{text.title}}</span>
 			</a>
 		</li>
-		<li><a href="#">{{getUnreadAnswers(text)}} unread answers</a></li>
-		<li><a href="#">{{getUnreadComments(text)}} unread comments</a></li>
+		<li><a href="#">{{getResponses(text)}} responses</a></li>
 	</ul>
 	<hr />
 </div>
