--- a/src/angular-app/sfchecks/partials/questions.html
+++ b/src/angular-app/sfchecks/partials/questions.html
@@ -38,8 +38,7 @@
 				<span class="larger-text">{{question.title}}</span>
 			</a>
 		</li>
-		<li><a href="#">{{getUnreadAnswers(question)}} unread answers</a></li>
-		<li><a href="#">{{getUnreadComments(question)}} unread comments</a></li>
+		<li><a href="#">{{getResponses(question)}} responses</a></li>
 	</ul>
 	<hr />
 </div>
