--- a/src/angular-app/sfchecks/partials/projects.html
+++ b/src/angular-app/sfchecks/partials/projects.html
@@ -25,8 +25,7 @@
 					<span class="larger-text">{{project.projectname}}</span>
 				</a>
 			</li>
-			<li><a href="#">{{getUnreadAnswers(project)}} unread answers</a></li>
-			<li><a href="#">{{getUnreadComments(project)}} unread comments</a></li>
+			<li><a href="#">{{getResponses(project)}} responses</a></li>
 		</ul>
 		<hr />
 	</div>
