made footer position stick to bottom of screen when content is less
Former-commit-id: 805c5454ecc662ad11afe54cf00b2d76c95eeb94

--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -33,6 +33,10 @@ ul, ol {
 	list-style: none;  
 }
 */
+
+html, body {
+	height: 100%;
+}
   
 a {  
 	color: #04abe1;  
@@ -237,7 +241,6 @@ div#footer {
 	position: relative;
 	width: 100%;
 	height: auto;
-	margin-top: 40px;
 	padding: 40px 0 40px 0;
 	background-color: #3a3a3a;
 	background: #3a3a3a url(../images/sf_sprite.png) no-repeat center -139px;
@@ -844,4 +847,22 @@ label {
 .nav-tabs li {
 	cursor: pointer;
 }
+
+#maincontainer {
+	min-height: 100%;
+	margin-bottom: -239px;
+	position: relative;
+	
+}
+
+#footercontainer {
+	height: 239px;
+	position: relative;
+	
+}
+.clearfooter {
+	height: 239px;
+	clear: both;
+}
+
 
