WIP on tags: better close icon
The closeicon.svg comes from the open-source Font Awesome. I extracted
it as a separate SVG file instead of as a font glyph because I needed
to modify it to make the "inside" of the circle opaque (and white), and
there was no way (that I know of) to do that with a font glyph.

--- a/src/angular-app/sfchecks/partials/robintest.html
+++ b/src/angular-app/sfchecks/partials/robintest.html
@@ -3,6 +3,16 @@
 		display: inline-block;
 		background: #cccccc;
 		position: relative;
+		padding: 5px;
+		border: 1px solid #333333;
+		margin-right: 0.2em;
+	}
+	.tag-list ul li img {
+		position: absolute;
+		top: -10px;
+		right: -10px;
+		color: red;
+		z-index: 1;
 	}
 	.tag-list ul li i.icon-remove-circle {
 		position: absolute;
@@ -15,8 +25,8 @@
 <h1>Title goes here</h1>
 <div class="tag-list">
 	<ul style="background: #ffcc99">
-		<li ng-mouseenter="show1 = true" ng-mouseleave="show1 = false">One<i class="icon-remove-circle" ng-show="show1"></i></li>
-		<li ng-mouseenter="show2 = true" ng-mouseleave="show2 = false">Two<i class="icon-remove-circle" ng-show="show2"></i></li>
-		<li ng-mouseenter="show3 = true" ng-mouseleave="show3 = false">Three<i class="icon-remove-circle" ng-show="show3"></i></li>
+		<li ng-mouseenter="show1 = true" ng-mouseleave="show1 = false">One<img src="/images/closeicon.svg" width="20" height="20" ng-show="show1"></img></li>
+		<li ng-mouseenter="show2 = true" ng-mouseleave="show2 = false">Two<img src="/images/closeicon.svg" width="20" height="20" ng-show="show2"></img></li>
+		<li ng-mouseenter="show3 = true" ng-mouseleave="show3 = false">Three<img src="/images/closeicon.svg" width="20" height="20" ng-show="show3"></img></li>
 	</ul>
 </div>
