WIP on tags: add/remove functions
Tags now have add and remove functions. Remove function has been
hooked up to the red close button. Still need to add the UI element
for adding tags (a text-entry box that will eventually become a kind
of specialised typeahead). Then once that's working, I'll turn this
into a directive.

--- a/src/angular-app/sfchecks/partials/robintest.html
+++ b/src/angular-app/sfchecks/partials/robintest.html
@@ -25,6 +25,10 @@
 <h1>Title goes here</h1>
 <div class="tag-list">
 	<ul style="background: #ffcc99">
-		<li ng-repeat="tag in tags" ng-mouseenter="show = true" ng-mouseleave="show = false">{{tag}}<img src="/images/closeicon.svg" width="20" height="20" ng-show="show"></img></li>
+		<li ng-repeat="tag in tags" ng-mouseenter="show = true" ng-mouseleave="show = false">
+			{{tag}}
+			<img src="/images/closeicon.svg" width="20" height="20" ng-show="show" ng-click="removeTag($index)"></img>
+		</li>
+		<!-- Next up: Hook up add/remove functions to those controls -->
 	</ul>
 </div>
