Fix #59 upload texts
* Disabled textdrop directive which was interfering with uploading of texts (and questions).

--- a/src/angular-app/sfchecks/partials/project.html
+++ b/src/angular-app/sfchecks/partials/project.html
@@ -10,9 +10,9 @@
 	<label>Title</label>
 	<input ng-model="title" class="span4" type="text" placeholder="Title"/>
 	<label>Text</label>
-	<textarea textdrop="content" ng-model="content" class="span4" rows="4" placeholder="Paste the USX text here"></textarea>
+	<textarea ng-model="content" class="span4" rows="4" placeholder="Paste the USX text here"></textarea>
 	<label></label>
-	<button type="submit" class="btn" ng-click="addText(); newTextCollapsed = true"><i class="icon-plus"></i>Add Text to Check</button>
+	<button type="submit" class="btn" ng-click="addText(); newTextCollapsed = true"><i class="icon-ok"></i>Save</button>
 	</fieldset>
 	</form>
 </div>
