--- a/src/angular-app/sfchecks/partials/questions-settings.html
+++ b/src/angular-app/sfchecks/partials/questions-settings.html
@@ -6,9 +6,9 @@
 		<label>Title</label>
 		<input type="text" class="span4" ng-model="editedText.title" placeholder="Text Name"/>
 		<label>Text</label>
-		<textarea textdrop="content" ng-model="editedText.content" class="span4" rows="4" placeholder="Paste the USX text here"></textarea>
+		<textarea ng-model="editedText.content" class="span4" rows="4" placeholder="Paste the USX text here"></textarea>
 		<label></label>
-		<button type="submit" class="btn"><i class="icon-pencil"></i>Save</button>
+		<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
 		</form>
 	</tab>
 </tabset>
