--- a/src/angular-app/common/css/palaso-ui.css
+++ b/src/angular-app/common/css/palaso-ui.css
@@ -100,3 +100,28 @@ form.control-bar {
 .highlighted {
 	background-color: yellow;
 }
+
+/* Styles for the two tagging directives (view-tags and add-tags) */
+.tag-list ul li {
+	display: inline-block;
+	background: #cccccc;
+	position: relative;
+	padding: 5px;
+	border: 1px solid #333333;
+	margin-right: 0.5em;
+	margin-bottom: 0.3em;
+	cursor: default;
+}
+
+.tag-list ul li img.closeicon {
+	position: absolute;
+	top: -10px;
+	right: -10px;
+	color: red;
+	z-index: 1;
+	cursor: pointer;
+}
+
+form.new-tags i.icon-plus {
+	color: green;
+}
