--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -58,10 +58,12 @@
 				<div ng-bind-html="answer.content">
 					{{answer.content}}
 				</div>
+				<view-tags tags="answer.tags"></view-tags>
 				<div class="by">
 					<img ng-src="{{answer.userRef.avatar_ref}}" width="32" height="32" /><div>answered {{answer.dateCreated | date:mediumDate}}<br/>by {{answer.userRef.username}}</div>
 				</div>
 				<div>
+				<a ng-show="rightsEditOwn(answer.userRef.userid) && !questionIsClosed()" class="btn-link" ng-click="showTagEditor()">tag</a>
 				<a ng-show="rightsEditOwn(answer.userRef.userid) && !questionIsClosed()" class="btn-link" ng-click="showAnswerEditor(answerId)">edit</a>
 				<a ng-show="rightsDeleteOwn(answer.userRef.userid) && !questionIsClosed()" ng-click="answerDelete(answerId)" class="btn-link">delete</a>
 				<ng-switch on="answerEditorVisible(answerId)">
@@ -71,6 +73,15 @@
 					<a class="btn-link" ng-click="hideAnswerEditor()">Cancel</a>
 				</form>
 				</ng-switch>
+				</div>
+				<div class="overlay-outer" ng-show="tagEditorVisible">
+					<div class="overlay-bg">
+						<div class="overlay-inner">
+							<add-tags tags="answer.tags"></add-tags>
+							<a ng-click="hideTagEditor()">Cancel</a>
+						</div>
+					</div>
+					<div class="overlay-clear"></div>
 				</div>
 			</div>
 			<table class="comments">
