--- a/src/angular-app/common/css/palaso-ui.css
+++ b/src/angular-app/common/css/palaso-ui.css
@@ -127,27 +127,20 @@ form.new-tags i.icon-plus {
 }
 
 /* Overlays */
-.overlay-outer {
-	position: relative;
-	width: 100%;
-	min-height: 250px;
-}
-
-.overlay-bg {
-	background-color: rgba(0,0,0,0.5);
+.overlay {
 	position: absolute;
-	width: 100%;
-	height: 100%;
-	z-index: 1001;
+	height: 100px;
+	top: 20px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
+	padding: 18px;
+	background-color: rgba(0, 0, 0, 0.80);
+	background: url(data:;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAABl0RVh0U29mdHdhcmUAUGFpbnQuTkVUIHYzLjUuNUmK/OAAAAATSURBVBhXY2RgYNgHxGAAYuwDAA78AjwwRoQYAAAAAElFTkSuQmCC)	repeat scroll transparent\9;
+	z-index: 9999;
+	color: white;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
 }
 
-.overlay-inner {
-	background-color: white;
-	margin: 100px;
-	border: solid black 1px;
-	z-index: 1002;
-}
-
-.overlay-clear {
-	float: clear;
-}
