--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -717,6 +717,31 @@ div#answerControls {
 	position: relative;
 }
 
+.overlay {
+	position: absolute;
+}
+
+div#answerControls .overlay {
+	top: 20px;
+}
+
+div.overlay form {
+	margin-bottom: 0px;
+}
+
+.overlay-bg {
+	padding: 18px;
+	background-color: rgba(0, 0, 0, 0.80);
+	background: url(data:;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAABl0RVh0U29mdHdhcmUAUGFpbnQuTkVUIHYzLjUuNUmK/OAAAAATSURBVBhXY2RgYNgHxGAAYuwDAA78AjwwRoQYAAAAAElFTkSuQmCC)	repeat scroll transparent\9;
+	z-index: 9999;
+	color: white;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+}
+
+
+
 div#comments {
 	width: 512px;
 	min-height: 400px;
