--- a/src/angular-app/common/css/palaso-ui.css
+++ b/src/angular-app/common/css/palaso-ui.css
@@ -102,15 +102,20 @@ form.control-bar {
 }
 
 /* Styles for the two tagging directives (view-tags and add-tags) */
+
+
 .tag-list ul li {
+	color: #3E6D8E;
+	background-color: #E0EAF1;
+	border-bottom: 1px solid #b3cee1;
+	border-right: 1px solid #b3cee1;
+	padding: 3px 4px 3px 4px;
+	margin: 2px 2px 2px 0;
+	text-decoration: none;
+	font-size: 90%;
+	line-height: 1.4;
+	white-space: nowrap;
 	display: inline-block;
-	background: #cccccc;
-	position: relative;
-	padding: 5px;
-	border: 1px solid #333333;
-	margin-right: 0.5em;
-	margin-bottom: 0.3em;
-	cursor: default;
 }
 
 .tag-list ul li img.closeicon {
