--- a/src/angular-app/common/css/palaso-ui.css
+++ b/src/angular-app/common/css/palaso-ui.css
@@ -105,6 +105,7 @@ form.control-bar {
 
 
 .tag-list ul li {
+	position: relative;
 	color: #3E6D8E;
 	background-color: #E0EAF1;
 	border-bottom: 1px solid #b3cee1;
