--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -59,7 +59,7 @@
 				<div ng-bind-html="answer.content">
 					{{answer.content}}
 				</div>
-				<view-tags tags="answer.tags"></view-tags>
+				<view-tags tags="answer.tags" on-delete="deletedTags(answer)"></view-tags>
 				<div class="by">
 					<img ng-src="{{answer.userRef.avatar_ref}}" width="32" height="32" /><div>answered {{answer.dateCreated | date:mediumDate}}<br/>by {{answer.userRef.username}}</div>
 				</div>
@@ -67,7 +67,9 @@
 					<div class="overlay" ng-show="tagEditorVisible">
 					<div class="overlay-bg">
 						<form ng-submit="addTags(tags, answer);tagEditorVisible=false">
+							<label for="inputtagstring">Add tags (comma-separated):</label>
 							<add-tags tags="tags"></add-tags>
+							<label></label>
 							<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
 							<a ng-click="tagEditorVisible=false">Cancel</a>
 						</form>
