--- a/src/angular-app/sfchecks/partials/project.html
+++ b/src/angular-app/sfchecks/partials/project.html
@@ -1,3 +1,4 @@
+<sil-messages markRead="markMessageRead"></sil-messages>
 <h2 style="font-weight:normal">Texts for {{project.name}}</h2>
 <form ng-show="rights.showControlBar" class="control-bar form-inline">
 	<button ng-disabled="selected.length == 0" ng-show="rights.deleteOther" class="btn" ng-click="removeTexts()"><i class="icon-remove"></i>Remove Texts</button>
