sms and email re-organised in a communicate class
Former-commit-id: 8ed8b2af9eb1591b5ce604eca478e1923103aeb5

--- a/src/angular-app/sfchecks/partials/project-settings.html
+++ b/src/angular-app/sfchecks/partials/project-settings.html
@@ -64,6 +64,8 @@
 		<input type="text" placeholder="(From Number)" ng-model="settings.sms.fromNumber"/>
 		<label>Email From (reply-to) Address</label>
 		<input type="email" placeholder="(From Email)" ng-model="settings.email.fromAddress"/>
+		<label>Email Name</label>
+		<input type="text" placeholder="(From Name)" ng-model="settings.email.fromName"/>
 	</fieldset>
 	<button style="margin-top:10px" type="submit" class="btn"><i class="icon-ok"></i>Save</button>
 	
