Fix bug with text settings page
It seems that as of Angular 1.2, two directives using transclude can
interfere with each other -- and both tabset and ng-switch use
transclusion. Moving the ng-switch to a separate div (and turning it
into ng-show/ng-hide) solves the problem.

--- a/src/angular-app/sfchecks/partials/questions-settings.html
+++ b/src/angular-app/sfchecks/partials/questions-settings.html
@@ -1,6 +1,6 @@
 <h2 style="font-weight:normal">Update {{textTitle}}</h2>
-<div ng-switch on="rights.editOther">
-<tabset ng-switch-when="true">
+<div ng-show="rights.editOther">
+<tabset>
 	<tab heading="Edit Text">
 		<form class="well " ng-submit="updateText(editedText)">
 		<label>Title</label>
@@ -12,5 +12,5 @@
 		</form>
 	</tab>
 </tabset>
-<div ng-switch-when="false"><p>You don't have permission to edit this text.</p></div>
 </div>
+<div ng-hide="rights.editOther"><p>You don't have permission to edit this text.</p></div>
